--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -57,9 +57,10 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             set -e
-            sudo mkdir -p /srv/devmanagertc/frontend
-            sudo rm -rf /srv/devmanagertc/frontend/*
-            sudo cp -r ~/frontend_release/* /srv/devmanagertc/frontend/
-            sudo chown -R www-data:www-data /srv/devmanagertc/frontend
-            sudo find /srv/devmanagertc/frontend -type f -name "*.map" -delete
+            mkdir -p /srv/devmanagertc/frontend
+            rm -rf /srv/devmanagertc/frontend/*
+            cp -r ~/frontend_release/* /srv/devmanagertc/frontend/
+            # (optional) if you want nginx to own files, keep next line; allowed by sudoers above
+            # sudo chown -R www-data:www-data /srv/devmanagertc/frontend
+            find /srv/devmanagertc/frontend -type f -name "*.map" -delete
             sudo systemctl reload nginx
